# Formosa

./: .gitignore  README.md  d8directions.py  demio.py  fetch_dem.py  flowdir.py  meson.build  pyproject.toml  setup.py  terrain_grid.py
src/formosa/: __init__.py  away_from_high_loop.c  core.py  d8directions.py  demio.py  fetch_dem.py  flow_distance_loop.c  flowdir.py  terrain.py  terrain_grid.py  towards_low_loop.c
src/formosa/api/: __init__.py  fetch_dem.py
src/formosa/cartography/: colour.py  hillshade.py
src/formosa/dem/: __init__.py  demio.py  terrain_grid.py  utils.py
src/formosa/dem/api/: __init__.py  fetch_dem.py  utils.py
src/formosa/geomorphology/: __init__.py  away_from_high_loop.c  away_from_high_loop.pyx  d8directions.py  flow_distance_loop.c  flow_distance_loop.pyx  flowdir.f2p  flowdir.f95  flowdir.py  flowdir.pyf  flowdir_f.f95  towards_low_loop.c  towards_low_loop.pyx
src/formosa/graphics/: __init__.py
tests/: test_ridges_f.py
