[project]
name = "formosa"
version = "0.1.0a0"
description = "Code for terrain analysis and visualisation."
readme = "README.md"
authors = [{ name = "williameclee", email = "williameclee@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
]

[build-system]
requires = ["setuptools>=74.1.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["formosa", "formosa.*"]


[dependency-groups]
dev = ["cython>=3.2.1", "pytest>=9.0.1", "setuptools>=80.9.0", "wheel>=0.45.1"]
